# NgasihTau

./: .gitignore  DEPLOY-VPS.md  MEMORY.md  README.md  docker-compose.dokploy.yml  docker-compose.prod.yml
be/: .env.example  .gitattributes  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  go.mod  go.sum  main.go  route.md
be/api/swagger/: docs.go  swagger.json  swagger.yaml
be/cmd/ai-service/: main.go
be/cmd/material-service/: main.go
be/cmd/notification-service/: main.go
be/cmd/pod-service/: main.go
be/cmd/search-service/: main.go
be/cmd/user-service/: main.go
be/docs/: swagger.go
be/file-processor/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
be/file-processor/learning_pulse/: __init__.py  feature_extractor.py  guardrails.py  models.py  persona_classifier.py  recommendations.py  router.py  train.py
be/file-processor/learning_pulse/models/: feature_scaler.joblib  model_metadata.json
be/file-processor/tests/: __init__.py  test_extraction.py  test_feature_extractor.py  test_guardrails.py  test_persona_classifier.py
be/internal/gateway/: README.md  integration_test.go
be/internal/offline/: README.md  integration_test.go  module.go
be/migrations/pod/: 000001_create_pods_table.down.sql  (+21 more)
be/postman/: NgasihTau_API.postman_collection.json
be/scripts/: init-databases-dokploy.sh  init-databases.sh
be/traefik/: traefik.yml
fe/: AI_CHAT_IMPLEMENTATION.md  Dockerfile  next.config.ts  package-lock.json  package.json
fe/messages/: en.json  id.json
fe/src/: proxy.ts  types.ts
nginx/: nginx.conf
nginx/ssl/: .gitkeep
(+441 files in other folders)
